--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@ a:link,a:visited {
 </style>
 <body style="margin:20px; padding:0">
         <div id="content" class="column"  role="main">
-        <a id="main-content"></a> 
+        <a id="main-content"></a>
 <img src="/courses/Eller_Webheader.png"><h2><font face="MiloWeb">Artificial Intelligence Laboratory</font></h2>
-<hr>	
-                          <h2 class="title" id="page-title"><font face="MiloWeb">Resources Page for MIS 464 and MIS 611D</font></h2>                                                       
-<div id="block-fieldblock-node-page-default-field-image" class="block block-fieldblock page-image-block first odd">      
+<hr>
+                          <h2 class="title" id="page-title"><font face="MiloWeb">Resources Page for MIS 464 and MIS 611D</font></h2>
+<div id="block-fieldblock-node-page-default-field-image" class="block block-fieldblock page-image-block first odd">
   <div class="field field-name-field-image field-type-image field-label-hidden">
     <img typeof="foaf:Image" src="/courses/darpa_big_data-cr.jpg" width="1058" height="386" alt="" />  </div>
 </div>
@@ -37,21 +37,18 @@ a:link,a:visited {
 
   <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><h3>Class Resources for <a href="/courses/MIS464">MIS 464</a>, Data Analytics, and <a href="/courses/MIS611D">MIS 611D</a>, Topics in Data and Web Mining (Spring 2019)</h3>
 <p>Instructor:  <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
-<h3>TOPIC 1: Introduction (MIS, CS, BI, AI, Data Science)</h3>
+<h3>TOPIC 1: Introduction (MIS, CS, BI, Data Science)</h3>
 
 <ol>
 <li><a href="/courses/MIS611D/chen_mis_review_2021.ppt" target="_blank">University of Arizona MIS Program: Overview</a>, by Dr. Hsinchun Chen</li>
 <li><a href="/courses/Advice" target="_blank"> Business Analytics Intellectual Landscape </a>, by Dr. Hsinchun Chen, 2020, <a href="/courses/resources/Analytics_Intellectual_Landscape_January_2020.pdf" target="_blank"> pdf version </a> </li>
 <li><a href="/courses/Curriculum" target="_blank">MIS Analytics Curriculum</a>, by Dr. Hsinchun Chen, 2020 <a href="/courses/resources/MIS_Analytics_Curriculum_January_2020.pdf" target="_blank"> pdf version </a></li>
 <li><a href="/courses/resources/History_and_Key_Events_of_AI_and_Data_Analytics.pdf" target="_blank"> History and Key Events of AI and Data Analytics </a> , by Dr. Hsinchun Chen, 2020</li>
-<li><a href="/courses/resources/01-acm_student_mebership_form.pdf" target="_blank" style="color: #0077b3;">ACM Student Membership Application and Order Form [PDF]</a>, [<a href="https://services.acm.org/public/qj/quickjoin/qj_control.cfm?promo=PWEBTOP&amp;form_type=Student" target="_blank">Online Link</a>]</li>
-<li><a href="https://www.ieee.org/membership/join/index.html" target="_blank">IEEE Student Membership Application</a></li>
 <li><a href="http://dl.acm.org/citation.cfm?doid=1877725.1877727" target="_blank">Ideas for the Future of the IS Field</a>, by G. B. Davis, P. Gray, S. Madnick, J. F. Nunamaker, R. Sprague, and A. Whinston.  <em>Transactions on Management Information Systems</em>, Volume 1, Issue 1, pp. 2:1 - 2:15. [<a href="/courses/resources/davis-ideas.pdf" target="_blank">PDF copy here</a>]</li>
 <li><a href="/courses/MIS611D/design-science-hchen.pdf" target="_blank">Design Science, Grand Challenges, and Societal Impacts</a>, by Hsinchun Chen<a href="http://dl.acm.org/citation.cfm?id=1929917" target="_blank">.</a> <em>Transactions on Management Information Systems</em>, Volume 2, Issue 1, pp. 1:1 - 1:10. [<a href="/courses/resources/chen-editorial-design-science.pdf" target="_blank">PDF copy here</a>]</li>
 <li><a href="/courses/MIS611D/chen_publications_2019.pdf" target="_blank">Journals, Conferences, and Funding Sources for MIS Researchers and Educators: A Resource Guide</a>, by Dr. Hsinchun Chen (Updated 2019)</li>
-<li><a href="/courses/MIS611D/2017_journal_citation_report.pdf" target="_blank">ISI Ranking of Top Computer Science and Information Systems Journals, from the ISI Web of Knowledge 2017 edition</a><a href="/courses/MIS510/chen-guide-mis-2003.pdf">, </a>updated in December 2018</li>
 <li><a href="/courses/h_index" target="_blank">The H-Index for MIS</a>, February 2019</li>
-<li><a href="http://web.cs.ucla.edu/~palsberg/h-number.html" target="_blank">The H-Index for Computer Science</a>, by Jens Palsberg, January 2020</li>
+<li><a href="http://web.cs.ucla.edu/~palsberg/h-number.html" target="_blank">The H-Index for Computer Science</a>, by Jens Palsberg, 2022</li>
 
 
 <li><a href="/courses/MIS611D/chenr_rsearch_template-2019.ppt" target="_blank">Template for Producing IT Research and Publication</a>, by Dr. Hsinchun Chen</li>
@@ -349,10 +346,10 @@ a:link,a:visited {
 </ol><h3>MISCELLANEOUS RESOURCES</h3>
 <ul><li><a href="/courses/MIS510/mis510-syllabus-spring-2014.pdf" target="_blank">MIS 510 Syllabus</a></li>
 
-<!--  COMMENTED OUT 
+<!--  COMMENTED OUT
   <li><a href="/courses/resources/SecuritySoftwareTweets.zip" target="_blank">MIS 562 Twitter</a></li>
  -->
- 
+
 </ul><hr />
 <p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="/courses/MIS464">Class Page for MIS 464, Data Analytics</a>
 <p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="/courses/MIS611D">Class page for MIS 611D, Topics in Data and Web Mining</a>
@@ -364,11 +361,11 @@ a:link,a:visited {
     <footer id="footer" class="region region-footer">
     <div id="block-nodeblock-97" class="block block-nodeblock footer-logo-block first odd">
 
-      
+
   <div id="node-97" class="node node-block view-mode-full clearfix" about="/block/footer-logo" typeof="sioc:Item foaf:Document">
 
         <span property="dc:title" content="Footer Logo" class="rdf-meta element-hidden"></span><span property="sioc:num_replies" content="0" datatype="xsd:integer" class="rdf-meta element-hidden"></span>
-  
+
   <div class="content">
     <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p><a href="http://www.arizona.edu/" target="_blank"><img src="https://ailab-ua.github.io/courses/footer-ua2.png" border="0" alt="The University of Arizona" width="52" height="38" /></a><a href="http://live-uas-eller.pantheonsite.io/"><img src="https://ailab-ua.github.io/courses/footer-eller3.png" border="0" alt="Eller College of Management" width="133" height="38" /></a></p>
 </div></div></div>  </div>
@@ -378,11 +375,11 @@ a:link,a:visited {
 </div>
 <div id="block-nodeblock-98" class="block block-nodeblock footer-contact-info-block even">
 
-      
+
   <div id="node-98" class="node node-block view-mode-full clearfix" about="/block/contact-information-block" typeof="sioc:Item foaf:Document">
 
         <span property="dc:title" content="Contact Information Block" class="rdf-meta element-hidden"></span><span property="sioc:num_replies" content="0" datatype="xsd:integer" class="rdf-meta element-hidden"></span>
-  
+
   <div class="content">
     <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><div class="container-inline-block column-2">
 <div>1130 E. Helen St. <br /> McClelland Hall 430 <br /> P.O. Box 210108 <br /> Tucson, Arizona 85721-0108 <br /> 520.621.6219</div>
@@ -397,11 +394,11 @@ a:link,a:visited {
 </div>
 
 </div>
-  
-  
+
+
 </div>
 
 </div>
   </footer>
-</div>  
+</div>
 </html>
